# eventstore-rs

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG  Cargo.toml  LICENSE  README.md  build.rs  codegen.rs
.github/workflows/: deploy.yml  rust.yml
protos/: messages.proto
protos/es6/: operations.proto  persistent.proto  projections.proto  shared.proto  streams.proto  users.proto
protos/tcp/: messages.proto
src/: client.rs  command.rs  connection.rs  discovery.rs  internal.rs  lib.rs  types.rs
src/discovery/: cluster.rs  constant.rs
src/es6/: commands.rs  connection.rs  mod.rs  types.rs
src/es6/grpc/: mod.rs  persistent.rs  streams.rs
src/es6/grpc/event_store/client/: mod.rs  persistent.rs  shared.rs  streams.rs
src/internal/: acl.rs  command.rs  commands.rs  connection.rs  data.rs  discovery.rs  driver.rs  endpoint.rs  messages.rs  messaging.rs  metadata.rs  mod.rs  operations.rs  package.rs  registry.rs  timespan.rs  types.rs
tests/: integration.rs
