[package]
name = "eventstore"
version = "0.4.1"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2018"

# Uncomment if you want to update messages.rs code-gen.
# We disabled codegen.rs because it requires having `protoc` installed on your machine
# in order to build that library.
# build = "codegen.rs"

license = "MIT"
description = "GetEventStore TCP client"
repository = "https://github.com/YoEight/eventstore-rs"
readme = "README.md"
keywords = ["database", "eventsourcing", "event", "eventstore", "ges"]
exclude = [
  ".gitignore",
  ".gitlab-ci.yml",
  ".travis.yml",
  "tests/**/*"
]

categories = ["database", "api-bindings"]

[dependencies]
tokio = "0.1"
tokio-timer = "0.2"
futures = "0.1"
uuid = { version  = "0.7", features = [ "v4", "serde" ] }
bytes = "0.4"
timer = "0.2"
time = "0.1"
protobuf = { version = "2.6", features = ["with-bytes"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
reqwest = "0.9"
vec1 = "1.4"
rand = "0.6"

[build-dependencies]
protoc-rust = "2.6"

[[test]]
name = "integration"

[dev-dependencies]
env_logger = "0.5"
